<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SEAN</string>
    <string name="menu_settings">Settings</string>
    <string name="titulo_atividade_login">SEAN</string>
    <string name="titulo_atividade_monitoramento">Sensor de Monitoramento</string>
    <string name="rotulo_login">Login</string>
    <string name="rotulo_senha">Senha</string>
    <string name="botao_logar">Logar</string>
    <string name="botao_status">Nenhum</string>
    <string name="botao_parar">Parar</string>
    <string name="botao_sair">Sair</string>
    <string name="botao_galeria">Galeria</string>
    <string name="botao_imagem">Imagem</string>
    <string name="botao_cancelar">Cancelar</string>
    <string name="rotulo_sean">SEAN</string>
    <string name="rotulo_descricao_sean">Sensor de Monitoramento</string>
    <string name="titulo_atividade_listagem">Galeria de Imagens</string>
    <string name="action_settings">Settings</string>
    <string name="rotulo_informacoes_produto">Informações do Produto</string>
    <string name="picture">Imagem</string>

</resources>